# airbnbclone-main

./: pyproject.toml
booking/: admin.py  models.py  serializers.py
booking/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_initial.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py  0003_alter_experience_category.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_remove_room_category_room_categories.py  0004_rename_categories_room_category.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py
